# hc-homie5-automation

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.base  README.md  rustfmt.toml
.github/workflows/: base-image.yml  ci.yml  rust.yml
deploy/docker/: .gitignore  docker-compose.yml
deploy/docker/lua/: mymod.lua
deploy/docker/meta/: manual.meta.yaml
deploy/docker/mqtt/config/: mosquitto.conf
deploy/docker/rules/: rules_test.hcrule.yaml
deploy/docker/virtual_devices/: test.vdevice.yaml
docs/: general_concepts.md  lua_runtime.md  rules.md  setup_config.md  virtual_devices.md
meta/: manual.meta.yaml
rules/: rules_test.hcrule.yaml
schemas/: rule.schema.json  virtual_devices.schema.json
src/: app_state.rs  cfg_files_tracker.rs  cron_manager.rs  device_manager.rs  homie.rs  lib.rs  mqtt_client.rs  rule_manager.rs  settings.rs  solar_events.rs  timer_manager.rs  unwrap_or_exit.rs  utils.rs
src/lua_runtime/: custom_loader.rs  device_ref.rs  event.rs  homie.rs  homie_value.rs  lua_module_manager.rs  mod.rs  propery_ref.rs  timer.rs  utils.rs  value_store.rs  virtual_device.rs
src/meta/: meta_manager.rs  mod.rs  model.rs
src/rules/: mod.rs
src/rules/engine/: action.rs  cron.rs  mod.rs  mqtt.rs  properties.rs  queries.rs  solar.rs  timer.rs  virtual_devices.rs  while_condition.rs
src/rules/model/: action.rs  mod.rs  subject.rs  timer.rs  trigger.rs  while_cond.rs
src/virtual_devices/: aggregate_members.rs  compound_member.rs  mod.rs  model.rs  property_indexer.rs  query_compound_member.rs  root_device.rs  virtual_device.rs  virtual_device_manager.rs  virtual_property.rs
virtual_devices/: test.vdevice.yaml
